@@ -5,7 +5,7 @@
 
     <groupId>com.bullhorn</groupId>
     <artifactId>sdk-rest</artifactId>
-    <version>1.4.53</version>
+    <version>2.0</version>
     <packaging>jar</packaging>
 
     <name>Bullhorn REST SDK</name>
@@ -42,7 +42,7 @@
         <org.springframework.version>4.2.6.RELEASE</org.springframework.version>
         <additionalparam>-Xdoclint:none</additionalparam>
         <coveralls-version>4.2.0</coveralls-version>
-        <jacoco-version>0.7.7.201606060606</jacoco-version>
+        <jacoco-version>0.8.8</jacoco-version>
     </properties>
 
     <dependencies>
@@ -145,7 +145,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>2.4.5</version>
+            <version>3.0.14</version>
         </dependency>
 
         <dependency>
@@ -194,7 +194,7 @@
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
-            <version>0.7-groovy-2.0</version>
+            <version>2.0-M2-groovy-3.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -223,6 +223,11 @@
             <version>2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
@@ -236,6 +241,13 @@
         </repository>
     </distributionManagement>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>groovy-plugins-release</id>
+            <url>https://groovy.jfrog.io/artifactory/plugins-release</url>
+        </pluginRepository>
+    </pluginRepositories>
+
     <build>
         <testResources>
             <testResource>
@@ -248,31 +260,30 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
+                    <version>3.8.1</version>
                     <configuration>
                         <compilerId>groovy-eclipse-compiler</compilerId>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <release>17</release>
                     </configuration>
                     <dependencies>
                         <dependency>
                             <groupId>org.codehaus.groovy</groupId>
                             <artifactId>groovy-eclipse-compiler</artifactId>
-                            <version>2.9.0-01</version>
+                            <version>3.6.0-03</version>
                         </dependency>
                         <dependency>
                             <groupId>org.codehaus.groovy</groupId>
                             <artifactId>groovy-eclipse-batch</artifactId>
-                            <version>2.3.4-01</version>
+                            <version>3.0.9-03</version>
                         </dependency>
                     </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.18.1</version>
+                    <version>2.22.2</version>
                     <configuration>
-                        <argLine>${argLine} -Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+                        <argLine>${argLine} -Xms512m -Xmx1024m -XX:MaxMetaspaceSize=512m</argLine>
                         <includes>
                             <include>**/Test*.java</include>
                             <include>**/*Spec.*</include>
